--- a/BayesianModel_Albarello_Nestola.ipynb
+++ b/BayesianModel_Albarello_Nestola.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d930c6e",
+   "id": "e857c454",
    "metadata": {},
    "source": [
     "<p id=\"index\"></p>\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd83dc41",
+   "id": "2a63d17b",
    "metadata": {},
    "source": [
     "<p id=\"dropping_columns\"></p>\n",
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0b3c31",
+   "id": "9156bef9",
    "metadata": {},
    "source": [
     "<p id=\"discretizing_age\"></p>\n",
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0316790",
+   "id": "b13fc292",
    "metadata": {},
    "source": [
     "<p id=\"discretizing_G3\"></p>\n",
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6be2594e",
+   "id": "69f4a67a",
    "metadata": {},
    "source": [
     "<p id=\"discretizing_absences\"></p>\n",
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c50f61a",
+   "id": "82fcde7c",
    "metadata": {},
    "source": [
     "<p id=\"discretizing_results\"></p>\n",
@@ -4798,7 +4798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0604a9",
+   "id": "0d84564b",
    "metadata": {},
    "source": [
     "<p id=\"index_inferences\"></p>\n",
@@ -4851,7 +4851,7 @@
     "\n",
     "- Intercausal:\n",
     "\n",
-    "    9. <a href = \"#app_absences_given_G3_studytime\"><u>*$P(absences| G3, studytime)$*</u></a>\n",
+    "    9. <a href = \"#app_absences_given_G3_studytime\"><u>*$P(Dalc| Studytime, goout)$*</u></a>\n",
     "    "
    ]
   },
@@ -5118,13 +5118,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb273c95",
+   "id": "c1652108",
    "metadata": {},
    "source": [
     "$$\n",
     "\\begin{align}\n",
-    "P(Grade| Sex= \"M\", Age= \"20-22\")\\\\\n",
-    "P(Grade| Sex= \"F\", Age= \"20-22\")\n",
+    "P(G3| Sex= \"M\", Age= \"20-22\")\\\\\n",
+    "P(G3| Sex= \"F\", Age= \"20-22\")\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -5898,7 +5898,7 @@
    "source": [
     "<p id=\"G3_given_studytime_activities\"></p>\n",
     "\n",
-    "* **What is the probabilities distribution of <u>G3</u> given <u>studytime</u> and <u>activities</u>?**\n",
+    "* **What is the probability distribution of <u>G3</u> given <u>studytime</u> and <u>activities</u>?**\n",
     "\n",
     "\n",
     "\n",
@@ -7029,7 +7029,10 @@
     "\n",
     "As we said above, exact inference is not the only way to compute inference queries, but sometimes it is advisable to compute an approximate result by considering only a restricted number of samples. As a matter of fact, the more samples we consider, the more accurate the result will be. \n",
     "\n",
-    "In the following we will consider some of the previous queries, but this time we will compute the *Probability Density Functions* by using approximate inference.  \n",
+    "In the following we will consider some of the previous queries, but this time we will compute the *Probability Density Functions* by using approximate inference with different number of samples (from 44 to 1045).  \n",
+    "\n",
+    "What we want to demonstrate is how much the *pdf* changes based on the number of samples and, as we can see, the greater the samples the closer the pdf of the approximate inference is to the counterpart of the exact inference.\n",
+    "\n",
     "\n",
     "<a href = \"#index\"><b>*back to the top*</b></a>"
    ]
@@ -7059,7 +7062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc4a889f",
+   "id": "2d967282",
    "metadata": {},
    "source": [
     "<p id=\"app_famsup_given_medu_fedu\"></p>\n",
@@ -7073,6 +7076,16 @@
     "$$\n",
     "\n",
     "<a href = \"#index_app\"><u>*back to the index of inferences*</u></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceadfc00",
+   "metadata": {},
+   "source": [
+    "PDF (based on exact inference):\n",
+    "- famsup(No): 0.2427\n",
+    "- famsup(Yes): 0.7573"
    ]
   },
   {
@@ -7272,32 +7285,242 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a26c65",
+   "id": "5a9e488c",
    "metadata": {},
    "source": [
     "<p id=\"app_absences_given_G3_studytime\"></p>\n",
     "\n",
-    "* **What is the probability distribution of the <u>absences</u> given the <u>studytime</u> and the <u>final grade</u>?**\n",
+    "* **What is the probability distribution of the <u>Dalc</u> given the <u>studytime</u> and the <u>goout</u>?**\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "P(absences| G3=\"Suficiente\", studytime= 1)\n",
+    "P(Dalc| Studytime=4, goout= 4)\n",
     "\\end{align}\n",
     "$$\n",
+    "\n",
+    "PDF (based on exact inference):\n",
+    "- Dalc(1): 0.7692\n",
+    "- Dalc(2): 0.0323\n",
+    "- Dalc(3): 0.0521\n",
+    "- Dalc(4): 0.0643\n",
+    "- Dalc(5): 0.0821\n",
     "\n",
     "<a href = \"#index_app\"><u>*back to the index of inferences*</u></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "a3ea5cf7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t44\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7273 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.1364 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0682 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0682 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t144\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7083 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0556 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0903 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0417 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.1042 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t244\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7787 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0656 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0574 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0451 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0533 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t344\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7035 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0669 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0610 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0872 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0814 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t444\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.6892 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0676 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0428 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0923 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.1081 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t544\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7647 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0515 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0423 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0772 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0643 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t644\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7283 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0559 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0792 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0668 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0699 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t744\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7298 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0524 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0538 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0699 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0941 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t844\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7180 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0462 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0592 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0711 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.1055 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t944\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7013 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0487 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0646 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0975 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0879 |\n",
+      "+---------+-------------+\n",
+      "Conditional Probability Table of variable \"Dalc\" given that \"{'goout': 4, 'studytime': 4}\" are observed:\n",
+      "\n",
+      "\tNumber of samples used to compute the approximate inference:\t1044\n",
+      "\n",
+      "\tConditional Probability Table:\n",
+      "+---------+-------------+\n",
+      "| Dalc    |   phi(Dalc) |\n",
+      "+=========+=============+\n",
+      "| Dalc(1) |      0.7174 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(2) |      0.0517 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(3) |      0.0690 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(4) |      0.0680 |\n",
+      "+---------+-------------+\n",
+      "| Dalc(5) |      0.0939 |\n",
+      "+---------+-------------+\n"
+     ]
+    }
+   ],
    "source": [
     "#variables:\n",
-    "query_variable = 'absences'\n",
-    "evidence_variables = dict({\"G3\": 'Suficiente', \"studytime\": 1})\n",
+    "query_variable = 'Dalc'\n",
+    "evidence_variables = dict({\"goout\": 4, \"studytime\": 4})\n",
     "\n",
     "#Approximate inference:\n",
     "for i in samples_num:\n",
@@ -7308,7 +7531,7 @@
     "    \n",
     "    print(f'Conditional Probability Table of variable \"{query_variable}\" given that \"{evidence_variables}\" are observed:')\n",
     "    print(f'\\n\\tNumber of samples used to compute the approximate inference:\\t{i}')\n",
-    "    print(f'\\n\\tConditional Probability Table:\\n\\t{q}')    "
+    "    print(f'\\n\\tConditional Probability Table:\\n{q}')    "
    ]
   },
   {
@@ -7322,7 +7545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35aee499",
+   "id": "1605245d",
    "metadata": {},
    "source": [
     "<p id=\"app_studytime_given_G3\"></p>\n",
@@ -7334,6 +7557,13 @@
     "P(studytime| G3=\"Suficiente\")\n",
     "\\end{align}\n",
     "$$\n",
+    "\n",
+    "PDF (based on Exact Inference):\n",
+    "- studytime(1): 0.3227\n",
+    "- studytime(2): 0.4785\n",
+    "- studytime(3):  0.1387\n",
+    "- studytime(4): 0.0601\n",
+    "\n",
     "\n",
     "<a href = \"#index_app\"><u>*back to the index of inferences*</u></a>"
    ]
@@ -7545,14 +7775,6 @@
     "    print(f'\\nNumber of samples used to compute the approximate inference:\\t{i}')\n",
     "    print(f'\\nConditional Probability Table:\\n{q}') "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45aa77c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
